# ffmpegDemo

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: jniLoad.cpp  jniLoad.h  test.cpp  test.h
app/src/main/cpp/utils/: const.h  util.cpp  util.h
app/src/main/java/com/example/test/: JniUtils.kt  MainActivity.kt
gradle/wrapper/: gradle-wrapper.properties
